--- a/packages/core/fields/complex/style.scss
+++ b/packages/core/fields/complex/style.scss
@@ -6,7 +6,7 @@
 	position: relative;
 	z-index: 0;
 
-	.cf-complex--tabbed-vertical & {
+	.cf-complex--tabbed-vertical > & {
 		flex: 0 0 80%;
 	}
 }
@@ -96,7 +96,7 @@
 		display: none;
 	}
 
-	.cf-complex--grid & {
+	.cf-complex__group--grid > & {
 		margin-top: -1px;
 	}
 }
@@ -198,6 +198,12 @@
 	display: flex;
 	align-items: center;
 
+	&--grid {
+		position: absolute;
+		top: 12px;
+		right: 12px;
+	}
+
 	&--tabbed {
 		justify-content: flex-end;
 		padding: 8px 12px;
@@ -205,12 +211,6 @@
 		border-style: solid;
 		border-color: $wp-color-gray-light-500;
 		background-color: $wp-color-gray-light-100;
-	}
-
-	.cf-complex--grid & {
-		position: absolute;
-		top: 12px;
-		right: 12px;
 	}
 }
 
@@ -246,12 +246,12 @@
 	position: relative;
 	z-index: 1;
 
-	.cf-complex--tabbed-horizontal & {
+	&--tabbed-horizontal {
 		display: inline-flex;
 		margin-bottom: -5px;
 	}
 
-	.cf-complex--tabbed-vertical & {
+	&--tabbed-vertical {
 		flex: 0 0 20%;
 		margin-right: -1px;
 	}
@@ -260,12 +260,12 @@
 .cf-complex__tabs-list {
 	margin: 0;
 
-	.cf-complex--tabbed-horizontal & {
+	.cf-complex__tabs--tabbed-horizontal & {
 		display: flex;
 		flex-wrap: wrap;
 	}
 
-	.cf-complex--tabbed-vertical & {
+	.cf-complex__tabs--tabbed-vertical & {
 		margin-bottom: -1px;
 	}
 }
@@ -281,27 +281,27 @@
 	cursor: pointer;
 	transition: background-color $transition-base, border-color $transition-base;
 
-	.cf-complex--tabbed-horizontal & {
+	&:hover {
+		background-color: $color-white;
+	}
+
+	&--tabbed-horizontal {
 		margin: 0 4px 4px 0;
 	}
 
-	.cf-complex--tabbed-vertical & ~ & {
+	&--tabbed-vertical ~ &--tabbed-vertical {
 		border-top-width: 0;
-	}
-
-	&:hover {
-		background-color: $color-white;
 	}
 
 	&--current {
 		background-color: $color-white;
 	}
 
-	.cf-complex--tabbed-horizontal &--current {
+	&--tabbed-horizontal#{&}--current {
 		border-bottom-color: $color-white !important;
 	}
 
-	.cf-complex--tabbed-vertical &--current {
+	&--tabbed-vertical#{&}--current {
 		border-right-color: $color-white !important;
 	}
 }
